Dernier nettoyage et mise à jour de la documentation de l'API
